@@ -1,3 +1,10 @@
+2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (HandleButtonPress):
+	ClickToFocus + ClickToFocusPassesClickOff now blocks event handling
+	until the button is released again; this restores the old behaviour
+	from 2.3.23 and before with click+drag and rxvt/aterm
+
 2002-06-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/update.c (apply_window_updates):
